[tool.poetry]
name = "02-mlflow-mojos"
version = "0.1.0"
description = "Getting up and running with machine learning experiments using MLflow."
authors = ["Youcef <22485028+ucefk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.13.0"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
